# xor-cipher

./: .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: check.yml  docs.yml  release.yml  test.yml
changelog/: index.html
changes/: 55.change.md  55.removal.md  ~branding.internal.md  ~python.removal.md
code_of_conduct/: index.html
contributing/: index.html
docs/: reference.md
reference/: index.html
search/: search_index.json
security/: index.html
src/: lib.rs  rust.rs
tests/: strategies.py  test_consistency.py  test_core.py  test_keys.py  test_python.py  test_static.py  test_xor_cipher.py
xor_cipher/: __init__.py  bytes.py  cipher.pyi  cipher.pyx  core.py  extension.pyi  extension.pyx  keys.py  python.py  typing.py
xor_cipher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
