[tool.poetry]
name = "xor-cipher"
version = "3.2.0"
description = "Simple, reusable and optimized XOR ciphers in Python."
authors = ["nekitdev", "RealistikDash"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/xor-cipher/xor-cipher"
repository = "https://github.com/xor-cipher/xor-cipher"
documentation = "https://docs.xor-cipher.org/"

keywords = ["python", "xor", "cipher"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Issues = "https://github.com/xor-cipher/xor-cipher/issues"

[[tool.poetry.packages]]
include = "xor_cipher"

[[tool.poetry.include]]
path = "xor_cipher/*.so"
format = "wheel"

[[tool.poetry.include]]
path = "xor_cipher/*.pyd"
format = "wheel"

[[tool.poetry.include]]
path = "xor_cipher"
format = "wheel"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = ">= 3.8"

[tool.poetry.group.format.dependencies]
ruff = "0.2.2"

[tool.poetry.group.check.dependencies]
mypy = "1.8.0"

[tool.poetry.group.check.dependencies.pre-commit]
version = "3.6.2"
python = ">= 3.9"

[tool.poetry.group.test.dependencies]
coverage = "7.4.3"
pytest = "8.0.2"
pytest-cov = "4.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.11"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "1.3.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov xor_cipher"
testpaths = ["tests"]

[tool.coverage.run]
source = ["xor_cipher"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

exclude = ["build.py"]

[tool.changelogging]
name = "xor-cipher"
version = "3.2.0"
url = "https://github.com/xor-cipher/xor-cipher"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.9.0", "cython >= 3.0.8", "entrypoint >= 2.0.1", "setuptools >= 69.1.1"]
build-backend = "poetry.core.masonry.api"
